fix production issues